--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -827,7 +827,7 @@ SizeFeatures={Size=42}]{Constantia Bold Italic}
 % All these drawings are done using tikz
 % AE: added a few more diagrams … Euler diagrams and directed graphs
 \usepackage{tikz}
-\usetikzlibrary{arrows,positioning,shapes,matrix,calc} 
+\usetikzlibrary{arrows,positioning,shapes,matrix,calc,patterns} 
 
 \tikzset{phantom_shape/.style={thick, fill=black!0, minimum width=30pt, minimum height=30pt}, % TB: renders the shape invisible
 		grey_shape/.style={thick, fill=black!20, draw, minimum width=30pt, minimum height=30pt}, % TB: renders a light grey shape with a black outline
